--- a/research.html
+++ b/research.html
@@ -87,17 +87,17 @@
 
     <section>
       <div class="container uppermargin grid default-grid">
-        <h3>ASSETS 2021 - PAPER ACCEPTED</h3>
+        <h3>ASSETS 2021/h3>
         <h4><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
         <p>
-          Our paper</i> has been accepted at ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
+          Our paper</i> appeared at   ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
         </p>
         <section class="blockquote-section">
           <p class="quotemarks justified"><i>Assistive navigational technologies offer considerable promise to people with visual impairments.  However, uptake of these technologies has traditionally been lower in low and middle-income countries (LMICs). In this paper, we describe a qualitative study undertaken with 14 people who identify as legally-blind in India to understand their requirements, experiences, and strategies undertaken when navigating with and without technology. We highlight key nuances that impact navigational habits including strategies to navigate within busy urban environments, strategies to address the impact of the rainy season, techniques used to navigate at night, and dealing with the impact of limited infrastructure. Our findings offer guidance to developers of navigational technologies to consider incorporating cultural, contextual, and technological factors of their users into the design of their systems to cater to a more diverse audience. </i></p>
         </section>
           <p>
-            Nagraj, A., Kuber, R., Hamidi, F., SG Prasad, R. “Investigating the nvaigational habits of people who are blind in India.” In Proceedings of the ACM SIGACCESS Conference on Computers & Accessibility (ASSETS ‘21), Online Virtual Conference, October 18-22, 2021.- to Appear (Acceptance rate: 29%)
-          </p>
+            <i>Nagraj, A., Kuber, R., Hamidi, F. & Prasad R.S.G., 2021: Investigating the Navigational Habits of People who are Blind in India.  In proceedings of the International ACM Conference on Computers and Accessibility – ASSETS’21, Article No. 33
+          </i></p>
 </div>
 <div class="devicer2"></div>
 </section>
