--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
         </li>
 
-        <li class="nav-item active">
+        <!--<li class="nav-item active">
           <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -81,7 +81,7 @@
               <img src="assets/img/Personal/Main Image 4.jpg" class="img-fluid" style="border-radius:100%"  alt="Image of Anirudh Nagraj standing with folded arms.">
             </div>
           <div class="col-md-9">
-            <p class="paragraph3 justified" align="center">I am a <b class="textbackground2"> UX Researcher</b> with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
+            <p class="paragraph3 justified" align="center"> I am a <b class="textbackground2"> User Experience Specialist </b> with <b class="textbackground2"> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
         </div>
       </div>
     </div>
