--- a/research.html
+++ b/research.html
@@ -64,10 +64,10 @@
           <a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
 		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
         </div>
-      </li> -->
+      </li>
 	   <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
-      </li>
+      </li>-->
     </ul>
   </div>
 </nav>
@@ -87,7 +87,7 @@
 
     <section>
       <div class="container uppermargin grid default-grid">
-        <h3>ASSETS 2021/h3>
+        <h3>ASSETS 2021</h3>
         <h4><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
         <p>
           Our paper</i> appeared at   ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
@@ -105,14 +105,14 @@
 
 <section>
   <div class="container grid default-grid">
-    <h3>CHI 2022 - PAPER SUBMITTED</h3>
-    <h4><strong>"It's not very easy to come across HCI": Exploring avenues and barriers in HCI Education across South Asia</strong></h4>
+    <h3>Web4All - PAPER SUBMITTED</h3>
+    <h4><strong> How and Why We Run: Investigating the Experiences of Blind and Visually-Impaired Runners</strong></h4>
     <p>
-      Our team from the HCI for South Asia community (HCI4SA) submitted a paper to ACM SIGCHI where we would be outline the factors enabling the exposure to HCI in South Asia. Study done in colalaboration with Pranjal Jain, Kartik Joshi, Taru Jain, Dilrukshi Gamage, Sayan Sircar, and Nova Ahmed.
+      Our team from the University of Maryland, Baltimore County, submitted a paper to the Web4All conference outlining the experiences of Blind and visually impaired runners.
     </p>
     <p>
       <section class="blockquote-section">
-        <p class="quotemarks justified"><i>Emerging economies such as South Asia have started to venture into the HCI discipline through research and innovation thereby affecting HCI as a knowledge discipline across the region. However, limited research has been conducted to know how HCI learning is imparted and how students get introduced to it. With the advent of innovation in knowledge sharing, newer avenues have emerged that elp students better understand the field. We conducted a survey with 64 participants and follow-up interviews with 12 participants to investigate the avenues of HCI knowledge dissemination in South Asia. We categorized these avenues into Traditional, Emergent, and Intersectional based on findings. We found that channels of social capital like identity and collective action are reflected in these avenues, yet factors like power and access persist.</i></p>
+        <p class="quotemarks justified"><i> Running offers a convenient and affordable method of keeping fit and maintaining good cardiovascular health. In this paper, we describe the experiences of a group of runners whose practices are rarely profiled: individuals who identify as legally-blind, some of whom run competitively, while others run for purposes of leisure. We specifically focus on planning strategies undertaken, experiences running both with and without sighted guides, the impact of situational and environmental factors, and the ways in which technology is utilized. The study has revealed a set of insights which if capitalized upon could offer considerable promise to support independent running. These include examining ways to reduce levels of uncertainty faced by runners, supporting autonomy, providing greater levels of environmental awareness, and aiding socialization when running. Findings from the work offer promise to interface designers to improve inclusiveness when developing technologies to support runners.</i></p>
       </section>
     </p>
 
