--- a/about.html
+++ b/about.html
@@ -66,9 +66,9 @@
               <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span><span class="sr-only">(current)</span></a>
             </li>
 
-	   <li class="nav-item active">
+	   <!-- <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
