--- a/mobileapp.html
+++ b/mobileapp.html
@@ -80,9 +80,9 @@
 		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
         </div>
       </li> -->
-	   <li class="nav-item active">
+	   <!-- <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
