--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
   <h2 align="center"><b>Hello! 👋🏽 I am Anirudh.</b></h2>
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <div class="uppermargin">
+      <div>
 
           <div class="row">
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
               <img src="assets/img/Personal/Main Image 4.jpg" class="img-fluid" style="border-radius:100%"  alt="Image of Anirudh Nagraj standing with folded arms.">
-            </div>
-          <div class="col-md-9">
-            <p class="paragraph3 justified" align="center"> I am a <b class="textbackground2"> User Experience Specialist </b> with <b class="textbackground2"> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
+            </div> -->
+          <div>
+            <p class="paragraph3 justified" align="center"> I am a <b class="textbackground2"> User Experience Specialist </b> at <b class="textbackground2 "> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
         </div>
       </div>
     </div>
@@ -98,18 +98,17 @@
     </div>
   </section><!-- End Hero -->
 
-  <div class="devicer"></div>
+  <!-- <div class="devicer"></div> -->
 
   <main id="main">
-<section>
-  <div class="container">
+
+  <!-- <div class="container">
     <h1 class="uppermargin paragraph4"> I've done a variety of projects.</h1>
     <h1 class="uppermargin paragraph4"> Be it building products, providing recommendations, or getting into research to provide guidelines.
-</h1>
+</h1> -->
 <div class="center bottompadding"><a href ="projects.html"><button class="custom-btn btn-1"> VIEW PROJECTS </button></a>
   </div>
 </div>
-</section>
 
 </main><!-- End #main -->
 
