--- a/research.html
+++ b/research.html
@@ -98,6 +98,8 @@
           <p>
             <i>Nagraj, A., Kuber, R., Hamidi, F. & Prasad R.S.G., 2021: Investigating the Navigational Habits of People who are Blind in India.  In proceedings of the International ACM Conference on Computers and Accessibility – ASSETS’21, Article No. 33
           </i></p>
+
+          <p><a href ="https://doi.org/10.1145/3441852.3471203">https://doi.org/10.1145/3441852.3471203</a></p>
 </div>
 <div class="devicer2"></div>
 </section>
@@ -105,7 +107,7 @@
 
 <section>
   <div class="container grid default-grid">
-    <h3>Web4All - PAPER SUBMITTED</h3>
+    <h3>Web4All 2022 - PAPER Accepted</h3>
     <h4><strong> How and Why We Run: Investigating the Experiences of Blind and Visually-Impaired Runners</strong></h4>
     <p>
       Our team from the University of Maryland, Baltimore County, submitted a paper to the Web4All conference outlining the experiences of Blind and visually impaired runners.
@@ -113,6 +115,24 @@
     <p>
       <section class="blockquote-section">
         <p class="quotemarks justified"><i> Running offers a convenient and affordable method of keeping fit and maintaining good cardiovascular health. In this paper, we describe the experiences of a group of runners whose practices are rarely profiled: individuals who identify as legally-blind, some of whom run competitively, while others run for purposes of leisure. We specifically focus on planning strategies undertaken, experiences running both with and without sighted guides, the impact of situational and environmental factors, and the ways in which technology is utilized. The study has revealed a set of insights which if capitalized upon could offer considerable promise to support independent running. These include examining ways to reduce levels of uncertainty faced by runners, supporting autonomy, providing greater levels of environmental awareness, and aiding socialization when running. Findings from the work offer promise to interface designers to improve inclusiveness when developing technologies to support runners.</i></p>
+      </section>
+    </p>
+
+</div>
+</section>
+
+<div class="devicer2"></div>
+
+<section>
+  <div class="container grid default-grid">
+    <h3>EduCHI 2022 - PAPER Submitted</h3>
+    <h4><strong> HCI Knowledge Dissemination in South Asia through both Coursework and Community Engagement </strong></h4>
+    <p>
+      Our team of researchers from South Asia submitted a paper to EduCHI 2022 on the topic of HCI knowledge Dissemination in South Asia.
+    </p>
+    <p>
+      <section class="blockquote-section">
+        <p class="quotemarks justified"><i> Emerging economies, such as those in South Asia, have begun to invest in the HCI discipline through research and innovation, affecting HCI as a knowledge discipline throughout the area. However, limited research has been conducted to understand how HCI learning is imparted and how students get introduced. With the advent of innovation in knowledge sharing, newer avenues have emerged that help students better understand the field. We surveyed 64 participants to investigate the avenues of HCI exposure in South Asia. We categorized these avenues into Traditional, Emergent, and Intersectional based on findings. We unpack the implications of avenues in facilitating HCI knowledge dissemination. We found access to community events and institute ranking play essential roles in accessing HCI knowledge.</i></p>
       </section>
     </p>
 
