--- a/about.html
+++ b/about.html
@@ -89,12 +89,12 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container uppermargin" data-aos="fade-up">
-      <p class ="justified paragraph">
-		  Glad you stopped by! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) to build better products. Currently, I am a <b> User Experience Specialist at UserWorks, Inc. </b> My aim in life has always been to make things as easy as possible for people with disabilities, a feeling directed towards the community, a drive only increased when I joined the University of Maryland, Baltimore County as a Human-Centered Computing graduate (Retrievers, Let's go! 🐶). As a HCI Research Assistant, working on accessibility projects taught me many research methods. Years of research have taught me that anything is possible; perseverance is the key. </p>
+      <p class ="paragraph">
+		  Glad you stopped by! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) and an ever bleeding passion for accessibility to build better products. Currently, I am a <b> User Experience Specialist at UserWorks, Inc. </b> </p>
 
 
 
-            <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="Circular image of Anirudh Nagraj">
+            <img src="assets/img/Personal/Ani_New.jpg" class="avatar6" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
 
 
             <!-- <p class="justified paragraph">
@@ -106,21 +106,21 @@
               <p class="justified paragraph"> Parallel to working as a HCI Research Assistant, I worked as a contracted UX Researcher with the Shared Services Center team of the University. I conducted Heuristic evaluations, conducted contextual analysis as a part of my research to revamp the website design that yielded successful results.
               </p> -->
 
-              <p class="justified paragraph"></p>
+              <p class="paragraph"></p>
 
               <h3 class ="uppermargin3" > Me and UX</h3>
-              <p class="justified paragraph">
+              <p class="paragraph">
              By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. P.S. I am also a huge fan of Web Accessibility, and I will take the IAAP- CPACC certification soon. </p>
 
             <h3 class="uppermargin"> Other things you may want to know about me...</h3>
-            <div class="row">
-              <div class="col-md-8">
-                <p class="justified paragraph">When idle, books offer a place of solace. I love mythology, modern history, and sport biographies. I am always on the lookout for books written to view multiple perspectives on different subjects. </p>
-                  <p class="justified paragraph"> I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time.   </p>
+            <!-- <div class="row">
+              <div class="col-md-8"> -->
+                <p class=" paragraph">When idle, books offer a place of solace. I love mythology, modern history, and sport biographies. I am always on the lookout for books written to view multiple perspectives on different subjects. </p>
+                  <p class="paragraph"> I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time.   </p>
               </div>
-              <div class="col-md-4">
-                <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
-              </div>
+              <!-- <div class="col-md-4">
+                 <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="Circular image of Anirudh Nagraj pointing to the mountains.">
+              </div> -->
             </div>
             <h3 class="uppermargin" align="center"><strong>Want to get in touch? Let's chat!</strong></h3>
             <div class="social-links" align="center">
