--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,36 @@
   </section><!-- End Hero -->
 
   <main id="main" data-aos="fade-up">
+
     <section class="container" id="portfolio">
+        <div class="container grid default-grid">
+              <div class="row row-xs-sm sample-row">
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong> Document Remediation Services - Coming soon! </strong></h1></div>
+            <p class="paragraph2 justified uppermargin">
+              Our team at UserWorks worked on remediating documents for different state departments and making them accessible for people with disabilities. We test each document manually and then run automated checks for proofreading. Accessibility testing done with tools like JAWS, Dragon, Etc.,
+            </p>
+
+             <!-- <a href="docremed.html"><button class="custom-btn btn-1">READ MORE </button></a></button>  -->
+        </div>
+            <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/Documents.png" class="avatar9 uppermargin3" alt="Red color folder with some papers inside."></div></div>
+            </div>
+      </section>
+
+      <section class="containerblue">
+        <div class="container grid default-grid">
+              <div class="row row-xs-sm sample-row">
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>United States Postal Service (USPS.com) Website Usability Study - Coming soon!</strong></h1></div>
+            <p class="paragraph2 justified uppermargin">
+              Our team at UserWorks conducted a usability study over a period of two months to generate recommendations for the United States Postal Service website (USPS.com).
+            </p>
+
+        <!-- <button class="custom-btn btn-1" onclick="window.location.href='postal.html'"> READ MORE </a></button> -->
+      </div>
+            <div class="col-md-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/usps-logo.png" class="img-fluid uppermargin3" alt="USPS logo"></div></div>
+            </div>
+      </section>
+
+<section class="container">
       <div class="container uppermargin grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
@@ -93,7 +122,7 @@
           </div>
     </section>
 
-    <section class="containerblue uppermargin3">
+    <section class="containerblue">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong>Shared Services Center website redesign</strong></h1></div>
@@ -108,7 +137,9 @@
     </section>
 
 
-    <section class="container">
+
+
+    <!-- <section class="container">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>COEIT research website redesign</strong></h1></div>
@@ -120,21 +151,9 @@
     </div>
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/CR.png" class="avatar8 uppermargin3" alt="Image showing the revamped COEIT website inside a mockup of a MacBook pro."></div></div>
           </div>
-    </section>
+    </section> -->
 
-    <section class="containerblue uppermargin3">
-      <div class="container grid default-grid">
-            <div class="row row-xs-sm sample-row">
-        <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong>B-AID: The navigational voice Application for people who are blind</strong></h1></div>
-          <p class="paragraph2 justified uppermargin">
-            Globally, millions of people suffer from vision-related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid visually impaired individuals in their navigation.
-          </p>
 
-          <a href="mobileapp.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
-      </div>
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/appdc.png" class="avatar7 uppermargin3" alt="Mobile phone showing one of the application screens."></div></div>
-          </div>
-    </section>
 
 
 
