--- a/research.html
+++ b/research.html
@@ -84,13 +84,54 @@
 
   <main id="main">
 
+    <section>
+      <div class="container grid default-grid">
+        <h3>Web4All 2022</h3>
+        <h4><strong> How and Why We Run: Investigating the Experiences of Blind and Visually-Impaired Runners</strong></h4>
+        <p>
+          Paper appeared at the Web4All conference 2022. Our team from the University of Maryland, Baltimore County, submitted a paper that appeared at the Web4All conference. This work outlined the experiences of Blind and visually impaired runners. Here is the abstract for the same:
+        </p>
+        <p>
+          <section class="blockquote-section">
+            <p class="quotemarks justified"><i> Running offers a convenient and affordable method of keeping fit and maintaining good cardiovascular health. In this paper, we describe the experiences of a group of runners whose practices are rarely profiled: individuals who identify as legally-blind, some of whom run competitively, while others run for purposes of leisure. We specifically focus on planning strategies undertaken, experiences running both with and without sighted guides, the impact of situational and environmental factors, and the ways in which technology is utilized. The study has revealed a set of insights which if capitalized upon could offer considerable promise to support independent running. These include examining ways to reduce levels of uncertainty faced by runners, supporting autonomy, providing greater levels of environmental awareness, and aiding socialization when running. Findings from the work offer promise to interface designers to improve inclusiveness when developing technologies to support runners.</i></p>
+          </section>
+        </p>
+
+        <p>
+          <i>Sidas Saulynas, Mei-Lian Vader, Apoorva Bendigeri, Tristan King, Anirudh Nagraj, and Ravi Kuber. 2022. How and why we run: investigating the experiences of blind and visually-impaired runners. In Proceedings of the 19th International Web for All Conference (W4A '22). Association for Computing Machinery, New York, NY, USA, Article 25, 1–11.
+        </i></p>
+
+        <p><a href ="https://doi.org/10.1145/3493612.3520445">https://doi.org/10.1145/3493612.3520445</a></p>
+
+    </div>
+    </section>
+
+<div class="devicer2"></div>
+
+    <section>
+      <div class="container grid default-grid">
+        <h3>EduCHI’22: 4th Annual Symposium on HCI Education</h3>
+        <h4><strong> HCI Knowledge Dissemination in South Asia through both Coursework and Community Engagement </strong></h4>
+        <p>
+          Our team of researchers from South Asia submitted a paper to EduCHI 2022 on the topic of HCI knowledge exposure to students in South Asia. Here is the abstract for the same:
+        </p>
+        <p>
+          <section class="blockquote-section">
+            <p class="quotemarks justified"><i> Emerging economies, such as those in South Asia, have begun to invest in the HCI discipline through research and innovation, affecting HCI as a knowledge discipline throughout the area. However, limited research has been conducted to understand how HCI learning is imparted and how students get introduced. With the advent of innovation in knowledge sharing, newer avenues have emerged that help students better understand the field. We surveyed 64 participants to investigate the avenues of HCI exposure in South Asia. We categorized these avenues into Traditional, Emergent, and Intersectional based on findings. We unpack the implications of avenues in facilitating HCI knowledge dissemination. We found access to community events and institute ranking play essential roles in accessing HCI knowledge.</i></p>
+          </section>
+        </p>
+
+    </div>
+    </section>
+
+<div class="devicer2"></div>
 
     <section>
       <div class="container uppermargin grid default-grid">
         <h3>ASSETS 2021</h3>
         <h4><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
         <p>
-          Our paper</i> appeared at   ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
+          Our paper</i> appeared at  ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
         </p>
         <section class="blockquote-section">
           <p class="quotemarks justified"><i>Assistive navigational technologies offer considerable promise to people with visual impairments.  However, uptake of these technologies has traditionally been lower in low and middle-income countries (LMICs). In this paper, we describe a qualitative study undertaken with 14 people who identify as legally-blind in India to understand their requirements, experiences, and strategies undertaken when navigating with and without technology. We highlight key nuances that impact navigational habits including strategies to navigate within busy urban environments, strategies to address the impact of the rainy season, techniques used to navigate at night, and dealing with the impact of limited infrastructure. Our findings offer guidance to developers of navigational technologies to consider incorporating cultural, contextual, and technological factors of their users into the design of their systems to cater to a more diverse audience. </i></p>
@@ -104,40 +145,6 @@
 <div class="devicer2"></div>
 </section>
 
-
-<section>
-  <div class="container grid default-grid">
-    <h3>Web4All 2022 - PAPER Accepted</h3>
-    <h4><strong> How and Why We Run: Investigating the Experiences of Blind and Visually-Impaired Runners</strong></h4>
-    <p>
-      Our team from the University of Maryland, Baltimore County, submitted a paper to the Web4All conference outlining the experiences of Blind and visually impaired runners.
-    </p>
-    <p>
-      <section class="blockquote-section">
-        <p class="quotemarks justified"><i> Running offers a convenient and affordable method of keeping fit and maintaining good cardiovascular health. In this paper, we describe the experiences of a group of runners whose practices are rarely profiled: individuals who identify as legally-blind, some of whom run competitively, while others run for purposes of leisure. We specifically focus on planning strategies undertaken, experiences running both with and without sighted guides, the impact of situational and environmental factors, and the ways in which technology is utilized. The study has revealed a set of insights which if capitalized upon could offer considerable promise to support independent running. These include examining ways to reduce levels of uncertainty faced by runners, supporting autonomy, providing greater levels of environmental awareness, and aiding socialization when running. Findings from the work offer promise to interface designers to improve inclusiveness when developing technologies to support runners.</i></p>
-      </section>
-    </p>
-
-</div>
-</section>
-
-<div class="devicer2"></div>
-
-<section>
-  <div class="container grid default-grid">
-    <h3>EduCHI 2022 - PAPER Submitted</h3>
-    <h4><strong> HCI Knowledge Dissemination in South Asia through both Coursework and Community Engagement </strong></h4>
-    <p>
-      Our team of researchers from South Asia submitted a paper to EduCHI 2022 on the topic of HCI knowledge Dissemination in South Asia.
-    </p>
-    <p>
-      <section class="blockquote-section">
-        <p class="quotemarks justified"><i> Emerging economies, such as those in South Asia, have begun to invest in the HCI discipline through research and innovation, affecting HCI as a knowledge discipline throughout the area. However, limited research has been conducted to understand how HCI learning is imparted and how students get introduced. With the advent of innovation in knowledge sharing, newer avenues have emerged that help students better understand the field. We surveyed 64 participants to investigate the avenues of HCI exposure in South Asia. We categorized these avenues into Traditional, Emergent, and Intersectional based on findings. We unpack the implications of avenues in facilitating HCI knowledge dissemination. We found access to community events and institute ranking play essential roles in accessing HCI knowledge.</i></p>
-      </section>
-    </p>
-
-</div>
-</section>
 
 
   </main><!-- End #main -->
