--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<meta name="viewport" content="width=device-width, user-scalable=no">
   <title>Anirudh Nagraj - Home</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -74,16 +73,11 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
   <h2 align="center"><b>Hello! 👋🏽 I am Anirudh.</b></h2>
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <div>
 
-          <div class="row">
-            <!-- <div class="col-md-3">
-              <img src="assets/img/Personal/Main Image 4.jpg" class="img-fluid" style="border-radius:100%"  alt="Image of Anirudh Nagraj standing with folded arms.">
-            </div> -->
           <div>
-            <p class="paragraph3 justified" align="center"> I am a <b class="textbackground2"> User Experience Specialist </b> at <b class="textbackground2 "> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
+            <p class="paragraph3" align="center"> I am a <b class="textbackground2"> User Experience Specialist </b> at <b class="textbackground2 "> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p>
         </div>
-      </div>
+
     </div>
 
          <!--
