--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
     <section id="about" class="about">
       <div class="container uppermargin" data-aos="fade-up">
       <p class ="paragraph">
-		  Glad you stopped by! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) and an ever bleeding passion for accessibility to build better products. Currently, I am a <b> User Experience Specialist at UserWorks, Inc. </b> </p>
+		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) and an ever bleeding passion for accessibility to build better products. Currently, I am a <b> User Experience Specialist at UserWorks, Inc. </b> </p>
 
 
 
