--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<a href="about.html#about-page" class="skip">Skip to main content</a>
   <title>Anirudh Nagraj - About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -90,7 +90,7 @@
     <section id="about" class="about">
       <div class="container uppermargin" data-aos="fade-up">
       <p class ="paragraph">
-		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) and an ever bleeding passion for accessibility to build better products. Currently, I am a <b> User Experience Specialist at UserWorks, Inc. </b> </p>
+		  Glad you stopped by! Hello once again! I am Anirudh - a soccer following, tea drinking, interaction designer who loves qualitative research (although I use a mixed methods approach) and an ever bleeding passion for accessibility to build better products. Formely, I was a  User Experience Specialist at UserWorks, Inc. <b> I am now open to UX/Accessibility Jobs in the market. </p> </b>
 
 
 
@@ -110,7 +110,7 @@
 
               <h3 class ="uppermargin3" > Me and UX</h3>
               <p class="paragraph">
-             By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. P.S. I am also a huge fan of Web Accessibility, and I will take the IAAP- CPACC certification soon. </p>
+             By leveraging UX Research, I get into the users' minds whom businesses serve. I help identify the clients' and stakeholders' needs, thereby increasing the product's value at hand. I like to work with multiple methods  (Interviews, Contextual Inquiries, Personas, etc.) to triangulate findings, backing up qualitative data with quantitative and vice-versa. The technique used in the research is dependent on the requirements of the businesses, stakeholders, and users. I am well versed in Assistive Technologies like JAWS, Dragon Naturally Speaking, NVDA. P.S. I am also a huge fan of Web Accessibility, and I will take the IAAP- CPACC certification soon. </p>
 
             <h3 class="uppermargin"> Other things you may want to know about me...</h3>
             <!-- <div class="row">
