--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
   <title>Anirudh Nagraj - Projects</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <a href="#about-page" class="skip">Skip to main content</a>
 
   <!-- Favicons -->
   <link href="assets/img/Personal/Logo3.png" rel="icon">
@@ -102,7 +103,7 @@
               Our team at UserWorks conducted a usability study over a period of two months to generate recommendations for the United States Postal Service website (USPS.com).
             </p>
 
-        <!-- <button class="custom-btn btn-1" onclick="window.location.href='postal.html'"> READ MORE </a></button> -->
+         <button class="custom-btn btn-1" onclick="window.location.href='postal.html'"> READ MORE </a></button>
       </div>
             <div class="col-md-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/usps-logo.png" class="img-fluid uppermargin3" alt="USPS logo"></div></div>
             </div>
