--- a/research.html
+++ b/research.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <a href="research.html#about-page" class="skip">Skip to main content</a>
 
   <title>Research Work</title>
   <meta content="" name="description">
