--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
           <div>
-            <p class="paragraph3" align="center"> I am a <b class="textbackground2"> User Experience Specialist </b> at <b class="textbackground2 "> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p>
+            <p class="paragraph3" align="center"> Formerly, a <b class="textbackground2"> User Experience Specialist </b> at <b class="textbackground2 "> UserWorks, Inc.</b> I come with an engineering background and a deep rooted passion for inclusive design and accessibility. I employ various research methods and accessibility tools to help build <b class="textbackground2">impactful products,</b> bringing customers and businesses closer to one another.  </p>
         </div>
 
     </div>
