--- a/postal.html
+++ b/postal.html
@@ -92,8 +92,8 @@
     			<p class="justified">
     				<h3><b>What's this about?</b></h3>
     				<p class=" justified paragraph">
-    					<b class="textbackground3"> Our team at UserWorks did a study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users in new pages that included international shipping. They also wanted us to analyze features that could be added in the future but in accordance with what the users mention.
-
+    					<b class="textbackground3"> Our team at UserWorks conducted a  study to generate recommendations for the United States Postal Service website. </b> The personnel at USPS wanted to check the interaction of users in new pages that included international shipping. They also wanted us to analyze features that could be added in the future but in accordance with what the users mention.
+             ** Note - not everything about the study is mentioned here on account of an NDA present.
     				</p>
     			</p>
 
@@ -115,14 +115,14 @@
 
 
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
-    <ul><li class="justified paragraph">  Difficult to settle on a single design for the rework.</li>
-    <li class="justified paragraph"> Condensing an already small architecture to accomodate the users needs.</li>
-    <li class="justified paragraph"> Improving content discovery on technical information was time consuming because of the learning associated with it.</li>
+    <ul><li class="justified paragraph">  Combating participant no-shows</li>
+    <li class="justified paragraph"> Maintaining attention span over 80 minute long interviews.</li>
+    <li class="justified paragraph"> Content question creation for interviews was time consuming</li>
     <li class="justified paragraph">
-      It was the first time I was handling quantitative data, so it took a while for me to learn and apply the concepts.
+      Prioritizing research findings and converting into meaningful recommndations.
     </li>
     <li class="justified paragraph">
-      Using Wordpress for content management was extremely challenging because it removes any flexibility required by the developer for content that would make the website aesthetically pleasing, or improve the functioning dramatically.
+      Lack of statistical data to highlight the actual impact of the change on account of the recommendations provided.
     </li>
     </ul>
 
@@ -141,6 +141,7 @@
 	<h3 class ="uppermargin"><strong>Study Structure</strong></h3>
 	<p class="justified paragraph"> 24 usability test sessions conducted remotely in November 2021.​ </p>
  <p class= "justified paragraph"> Each session was approximately 80 minutes.</p>
+ <p class ="paragraph">   Sessions were split into those conducted on mobile and those on desktop, along with those mailing and shipping primarily for personal (consumer) reasons, business reasons, or a bit of both (hybrid).
 
 </div>
 
@@ -149,189 +150,81 @@
   	<div class="containerblue bottompadding">
   		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
   		<p class="justified countermargin" style="color:#000">
-  			I conducted interviews of people who worked at the university and atleast heard of the Shared Services Center. Experience of people with the website ranged from first time users to people who have seen the website since its inception.
+
+        4 participants in each category were recruited, for a total of 4 mobile personal (consumer) sessions, 4 mobile business, 4 mobile hybrid (with 1 participating using a tablet), 4 desktop personal, 4 desktop business, and 4 desktop hybrid.
+
+        Other participant categories, such as business size (where applicable), age, education, location (urban, suburban, or rural), state, and how often they visited USPS.com were recruited to the best possible mix.
+
   		</p>
   		<div class="row">
   			<div class="col-md-3 offset-1 facts uppermargin" align="center">
               <div class="count-box">
                 <i class="icofont-people"></i>
-                <span >5</span>
+                <span >26</span>
                 <p style="color:#000; font-size:14px">Participants Interviewed</p>
   			  </div>
   		</div>
   		<div class="col-md-6 uppermargin countermargin">
-  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Faculty, Students, Researchers and Admin Staff. Age: 18+<p>
+  			<p class="paragraph"  style="color:#000"><b>Demographic:</b> Users of the USPS.com website<p>
 
   				<p class="paragraph" style="color:#000"><b>Gender:</b> Any</p>
 
   					<p class="paragraph" style="color:#000"><b>Ethnicity: </b> Any</p>
 
-  					<p class="paragraph" style="color:#000"><b>Experience with the website:</b> No Experience to Expert User. </p>
   				</div>
   		</div>
 
-
-  		<div class="uppermargin3">
-  			<div class="row">
-  		</div>
-  		<div class="row">
-  			<div class="col-md-4 offset-2">
-  				<h4 class="color-x"><b>#1. Context Issues</b> </h4>
-  			</div>
-  			<div class="col-md-4 ">
-  				<h4 class="color-x"><b>#2. Repetitive Information</b> </h4>
-  			</div>
-  		</div>
-
-
-
-  		<div class="row uppermargin bottompadding">
-  			<div class="col-md-4 offset-2">
-  				<h4 class="color-x"><b>#3. Search Relevancy</b> </h4>
-  			</div>
-  			<div class="col-md-4 ">
-  				<h4 class="color-x"><b>#4. Images tagged as "outdated" and "useless"</b> </h4>
-  			</div>
-  		</div>
-
-  	</div>
    </div>
-
-<h3 class="uppermargin3" align="center"><b>HEURISTIC EVALUATION</b></h3>
-
-<p class="justified">
-   I took the role of the evaluator and performed Heuristic evaluations on the Shared Services Center Website. To achieve this, I worked to identify  issues with the website, per Nielsen’s Ten Heuristics. I found issues pertinent mainly to search, navigation, and content discovery.
-</p>
-
-
-    <div class="row">
-    <div class="col-md-6">
-      <div class="image uppermargin">
-
-        <figure>
-          <img src="assets/img/Personal/SSC Quick Guide.png" class="avatar7 uppermargin" alt="Image of a Shared Services Center subpage.">
-            <figcaption  align="center"><i>A SSC subpage.</i></figcaption>
-          </figure>
-        </div>
-      </div>
-      <div class="col-md-6 justified">
-        <h5 class="textbackground3 uppermargin"><b>#1: VISIBILITY OF SYSTEM STATUS</b></h5>
-        <p class="justified">
-          Outdated Images may throw the user off guard and may be one of the main issues that increases the bounce rates.
-        </p>
-
-        <h5 class="textbackground3 uppermargin"><b>#2: MATCH BETWEEN SYSTEM AND THE REAL WORLD</b></h5>
-        <p class="justified"> The content within the website may be known to the people working in the Shared Services Center, however it may be  difficult for a general audience to comprehend.</p>
-
-        <h5 class="textbackground3 uppermargin"><b>#8: AESTHETIC AND MINIMALIST DESIGN</b></h5>
-        <p class="justified">Images do not link to the information presented in the website.some of the information on the website is repetitive and is a waste of time for the users. Cluttering of content does not help.</p>
-        </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="containerblue bottompadding">
-      <h3 class="uppermargin3 color-x" align="center"><Strong>NET PROMOTER SCORE</Strong></h3>
-      <p class="justified countermargin" style="color:#000">
-       I reached out to facebook groups, Whatsapp chats, and other forums with college students to know if they would recommend this website or not. The NPS score is a good indicator to tell me if the website needs improvements or not. I sent out the survey twice in a span of 6 months.
-      </p>
-      <div class="row">
-        <div class="col-md-3 offset-1 facts uppermargin" align="center">
-              <div class="count-box">
-                <i class="icofont-people"></i>
-                <span>56</span>
-                <p style="color:#000; font-size:14px">Survey Respondents</p>
-          </div>
-      </div>
-      <div class="col-md-6 uppermargin countermargin"  style="color:#000">
-        <img src="assets/img/Personal/NPS.png" class="img-fluid" alt="Image of human stick figures.">
-        <div align="center">
-
-
-        <p class="justified paragraph uppermargin"> Promoters - 28
-        </p>
-        <p class="justified paragraph"> Passives - 11</p>
-        <p class="justified paragraph"> Detractors - 17</p>
-
-        <p class="justified paragraph"> Total = 56</p>
-    </div>
-          </div>
-      </div>
-
-        <div class="uppermargin countermargin">
-          <h2 class="justified" style="text-align:center; color:#000"> NPS SCORE = 30.3</h2>
-      </div>
-        </div>
-      </div>
 </div>
 </section>
 
-
-<blockquote class="otro-blockquote">
-  I like this graphic (Referring to the graphic on the homepage). Always catches my attention, graphics. But I really do not know what/why these images on the homepage even exist. - Participant
-</blockquote>
-
 <div class="container">
-  <h3 class="uppermargin3"><Strong>Insights </Strong></h3>
+  <h3 class="uppermargin3"><Strong>Some Findings from the Interviews </Strong></h3>
   <p class="justified paragraph">
-      From the quickfire research conducted, coupled with NPS scores and quantitative data, I gathered the following insights.
+      From the exhaustive interviews conducted, interesting findings emerged.
     </p>
     <ul>
-      <p class="paragraph"><b class="textbackground3">Content Redundancy </b>  Content is repetitive in a lot of places, making the user shy away from the website.</p>
-      <p class="paragraph"><b class="textbackground3">Context </b>Content is littered with jargons and can be simplified.</li>
-      <p class="paragraph"><b class="textbackground3">Links: </b> Images do not have links and some of the text are colored like links but do not function as links.
+    <li class ="paragraph">The participants in this study sent international mail and packages very infrequently.</li>
+    <ul>
+      <li class="paragraph">This was intentional; we wanted to obtain feedback from those who would most benefit from these additions – those to whom this information is new.</li>
+      <li class="paragraph">Most business participants were sending documents or printed materials, rather than manufactured parts or goods.</li>
+      <li class="paragraph">Going to the Post Office was generally not seen as a hassle because the Post Office was either close by or worth the travel, given how infrequently they sent internationally.
+      </li>
+      <li class="paragraph">
+      Usually, participants wanted to avoid going to the Post Office to avoid lines or “unfriendly” staff, rather than due to travel distance.
+    </li>
       </p>
-      <p class="paragraph"><b class="textbackground3"> Carousel: </b> Carousel is pretty but is unwanted by the users. Feels like it is "just there".
-      </p>
-      <p class="paragraph"><b class="textbackground3">HomePage: </b>Home page appears bland to make users stay on the page.
-      </p>
-      <p class="paragraph">
-        <b class="textbackground3">Content: </b>Content can be made concise to accomodate all the information.
-      </p>
-      <p class="paragraph">
-        <b class="textbackground3">Color: </b>An overwhelming opinion is about changing the color to the either the university colors or an alterative color scheme.</b>
-      </p>
-        <p class="paragraph"><b class="textbackground3">Abbreviations: </b> All abbreviations to be expanded on the website for clarity.
-        </p>
-        <p class="paragraph"><b class="textbackground3">Number of users: </b> Comparitively low for the month (< 100)
-        </p>
-
     </ul>
+    <li class ="paragraph"> Most saw USPS.com as a cohesive website, rather than a “portal” of sorts.
+  </ul>
   </p>
 
   </div>
 
+<div class="container">
+  <h3 class="uppermargin3"><Strong>Recommendations  </Strong></h3>
+  <img src="assets/img/Personal/Screenshot 2022-05-06 031021.png" class="img-fluid uppermargin" alt="Image showing a recommendation">
 
-  <section>
-    <div class="container">
-      <h3><b>New Information Architecture</b></h2>
-        <img src="assets/img/Personal/Architecture_New.png" class="avatar9 uppermargin" alt="Image of a chart depicting the new information architecture.">
-      </div>
-  </section>
-
+  <img src="assets/img/Personal/Screenshot 2022-05-06 031609.png" class="img-fluid uppermargin3" alt="Image showing a recommendation">
+  </div>
 
   <section>
     <div class="container">
       <h3><b>Impact</b></h2>
-      <p class="justified paragraph">Through observations and incorporating quantitative data, the team managed to improve the <b class="textbackground3"> NPS from 30 - 50</b>. </p>
-      <p class="justified paragraph">Increase the number of users over a period of 6 months to an all time high of <b class="textbackground3">181 users </b> for a single month. </p>
-
-      <img src="assets/img/Personal/UserData.png" class="img-fluid uppermargin" alt="Image showing user data.">
-
-      <p class="justified paragraph"> The page views have been consistent and the <b class="textbackground3"> bounce rates came to stand at an all time low of 27%. </b> </p>
-
-      <p class="justified paragraph">Due to the changes implemeted post user research, the numbers show that the average number of page views was higher than what was before the redesign, with an <b class="textbackground3">all time high of 1079 page views </b>after the redesign. </p>
+      <p class="justified paragraph">Recommendations to improve the overall User Experience of users visiting USPS.com</b>. </p>
+      <p class="justified paragraph">Simpler navigation across pages. </p>
+      <p class="justified paragraph">Placement of images where required for improved readability </p>
 
     </div>
 
   <div class="container">
         <h3 class="uppermargin"><strong>Next Steps</strong></h3>
-        <p class="justified paragraph">As a team, we would be monitoring the data with respect to bounce rates, click rates over the course of the next three months. The team will perform various tests on the new website and compare the metrics with the older version to check how the website is doing. Post three months, the team would send out another survey with respect to the NPS scored that now stands at 50.</p>
+        <p class="justified paragraph">Depending on the application and development of the features and improvements provided by the participants, long term observation would be beneficial to measure the impact and success of the proposed changes.  Without numbers, it becomes difficult for for UX Researchers to measure the true impact of the recommendations provided.</p>
 
 
   <h3 class="uppermargin"><b>Takeaways</b></h2>
   <p class="justified paragraph bottompadding">
-    This was the first job that introduced me to statistical research. I learned that numbers are essential when it comes to any project that deals with completion rates, and bounce rates. A steep learning curve nonetheless, I feel that given the start, I am now empowered with another tool in my research arsenal. This project has taught me to integrate qualitative and quantitative in a short period of time. Something that I look forward to doing in my upcoming works of UX.
+    80 minute interviews are exhaustive and recruiting is a lenghty process. As a researcher, it is paramount to have enormous patience until the study is done. Qualitative coding helps in analyzing the findings. One key takeaway is each participant's view is different and can lead to different perspectives. Bias plays a very important role in the type of answer provided by the user.
   </p>
   </div>
 
