--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
       <section class="containerblue">
         <div class="container grid default-grid">
               <div class="row row-xs-sm sample-row">
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>United States Postal Service (USPS.com) Website Usability Study - Coming soon!</strong></h1></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#333333"><strong>United States Postal Service (USPS.com) Website Usability Study</strong></h1></div>
             <p class="paragraph2 justified uppermargin">
               Our team at UserWorks conducted a usability study over a period of two months to generate recommendations for the United States Postal Service website (USPS.com).
             </p>
