--- a/projects.html
+++ b/projects.html
@@ -84,9 +84,9 @@
     <section class="container" id="portfolio">
         <div class="container grid default-grid">
               <div class="row row-xs-sm sample-row">
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong> Document Remediation Services - Coming soon! </strong></h1></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#333333" class=" uppermargin"><strong> Document Remediation - Usability Study - Coming soon! </strong></h1></div>
             <p class="paragraph2 justified uppermargin">
-              Our team at UserWorks worked on remediating documents for different state departments and making them accessible for people with disabilities. We test each document manually and then run automated checks for proofreading. Accessibility testing done with tools like JAWS, Dragon, Etc.,
+              Our team at UserWorks worked on remediating documents for different state departments and making them accessible for people with disabilities. We tested each document manually and then run automated checks for proofreading. Accessibility testing done with tools like JAWS and Dragon. We then conducted 1-1 interviews on the documents remediated for review and feedback
             </p>
 
              <!-- <a href="docremed.html"><button class="custom-btn btn-1">READ MORE </button></a></button>  -->
